lab3/replicaSet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: ifilyaninitmo/itdt-contained-frontend:master
                  ports:
                      - containerPort: 3000
                        name: http
