lab3/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
    name: node-port
spec:
    type: NodePort
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
          name: http
    selector:
        app: frontend
