lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: front-ingress
spec:
    rules:
        - host: lab3test.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: node-port
                            port:
                                number: 3000
